--- a/docs/examples/templates/secure.mdx
+++ b/docs/examples/templates/secure.mdx
@@ -24,7 +24,7 @@ llm = ChatAzureOpenAI(model='gpt-4.1-mini', api_key=api_key, azure_endpoint=azur
 
 # Secure browser configuration
 browser_profile = BrowserProfile(
-    allowed_domains=['*google.com', 'browser-use.com'], 
+    allowed_domains=['*google.com', 'example.com'], 
     enable_default_extensions=False
 )
 
