--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -16,16 +16,15 @@ icon: "browser"
 />
 
 <CardGroup cols={2}>
-  <Card title="Local Setup" icon="terminal" href="/quickstart">
-     Open-source Python library.
+  <Card title="Quick Start" icon="terminal" href="/quickstart">
+     Get started with OpenBrowser in minutes.
   </Card>
   <Card
-    title="Cloud Setup"
-    icon="cloud"
-    href="https://docs.cloud.browser-use.com"
+    title="Supported Models"
+    icon="brain"
+    href="/supported-models"
     color="#0ea5e9"
   >
-      Scale up with Browser Use cloud.
-
+      See all supported LLM providers.
   </Card>
 </CardGroup>
