--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -6,10 +6,6 @@ icon: "rocket"
 
 To get started with OpenBrowser you need to install the package and create an `.env` file with your API key.
 
-<Note icon="key" color="#FFC107" iconType="regular">
-`ChatBrowserUse` offers the [fastest and most cost-effective models](https://browser-use.com/posts/speed-matters/), completing tasks 3-5x faster. Get started with $10 of [free LLM credits](https://cloud.browser-use.com/new-api-key).
-</Note>
-
 ## 1. Installing OpenBrowser
 
 
@@ -30,10 +26,6 @@ uvx openbrowser install
 ## 2. Choose your favorite LLM
 Create a `.env` file and add your API key. 
 
-<Callout icon="key" iconType="regular">
-We recommend using ChatBrowserUse which is optimized for browser automation tasks (highest accuracy + fastest speed + lowest token cost). Don't have one? We give you **$10** to try it out [here](https://cloud.browser-use.com/new-api-key).
-</Callout>
-
 ```bash .env
 touch .env
 ```
@@ -43,15 +35,10 @@ touch .env
 Then add your API key to the file.
 
 <CodeGroup>
-```bash OpenBrowser
-# add your key to .env file
-BROWSER_USE_API_KEY=
-# Get 10$ of free credits at https://cloud.browser-use.com/new-api-key
-```
 ```bash Google
 # add your key to .env file
 GOOGLE_API_KEY=
-# Get your free Gemini API key from https://aistudio.google.com/app/u/1/apikey?pli=1.
+# Get your free Gemini API key from https://aistudio.google.com/app/u/1/apikey
 ```
 ```bash OpenAI
 # add your key to .env file
