--- a/docs/examples/apps/vibetest-use.mdx
+++ b/docs/examples/apps/vibetest-use.mdx
@@ -74,7 +74,7 @@ claude mcp add vibetest /full/path/to/vibetest-use/.venv/bin/vibetest-mcp \
 
 ## Basic Prompts
 ```
-> Vibetest my website with 5 agents: browser-use.com
+> Vibetest my website with 5 agents: example.com
 > Run vibetest on localhost:3000
 > Run a headless vibetest on localhost:8080 with 10 agents
 ```
