--- a/docs/supported-models.mdx
+++ b/docs/supported-models.mdx
@@ -5,44 +5,7 @@ icon: "microchip-ai"
 
 ---
 
-### OpenBrowser [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/openbrowser_llm.py)
-
-`ChatBrowserUse()` is our optimized in-house model, matching the accuracy of top models while completing tasks **3-5x** faster. [See our blog post→](https://browser-use.com/posts/speed-matters)
-
-```python
-from openbrowser import Agent, ChatBrowserUse
-
-# Initialize the model
-llm = ChatBrowserUse()
-
-# Create agent with the model
-agent = Agent(
-    task="...", # Your task here
-    llm=llm
-)
-```
-
-Required environment variables:
-
-```bash .env
-BROWSER_USE_API_KEY=
-```
-
-Get your API key from the [Browser Use Cloud](https://cloud.browser-use.com/new-api-key). New signups get \$10 free credit via OAuth or \$1 via email.
-
-#### Pricing
-
-ChatBrowserUse offers competitive pricing per 1 million tokens:
-
-| Token Type | Price per 1M tokens |
-|------------|---------------------|
-| Input tokens | $0.50 |
-| Output tokens | $3.00 |
-| Cached tokens | $0.10 |
-
-<Note>
-  Cached tokens provide significant cost savings on repeated context, reducing input costs by 80%.
-</Note>
+OpenBrowser supports a wide variety of LLM providers. Choose the one that best fits your needs.
 
 ### Google Gemini [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/gemini.py)
 
@@ -343,11 +306,108 @@ Required environment variables:
 MODELSCOPE_API_KEY=
 ```
 
-## Other models (DeepSeek, Novita, X...)
+## Other models (DeepSeek, Novita, OpenRouter...)
 
 We support all other models that can be called via OpenAI compatible API. We are open to PRs for more providers.
 
-**Examples available:**
-- [DeepSeek](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/deepseek-chat.py)
-- [Novita](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/novita.py)
-- [OpenRouter](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/openrouter.py)
+### DeepSeek [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/deepseek-chat.py)
+
+```python
+from openbrowser import Agent
+from openbrowser.llm import ChatDeepSeek
+import os
+
+deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')
+
+llm = ChatDeepSeek(
+    base_url='https://api.deepseek.com/v1',
+    model='deepseek-chat',
+    api_key=deepseek_api_key,
+)
+
+agent = Agent(
+    task='Your task here',
+    llm=llm,
+    use_vision=False,
+)
+```
+
+Required environment variables:
+
+```bash .env
+DEEPSEEK_API_KEY=
+```
+
+### Novita [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/novita.py)
+
+```python
+from openbrowser import Agent, ChatOpenAI
+import os
+
+api_key = os.getenv('NOVITA_API_KEY')
+
+agent = Agent(
+    task='Your task here',
+    llm=ChatOpenAI(
+        base_url='https://api.novita.ai/v3/openai',
+        model='deepseek/deepseek-v3-0324',
+        api_key=api_key,
+    ),
+    use_vision=False,
+)
+```
+
+Required environment variables:
+
+```bash .env
+NOVITA_API_KEY=
+```
+
+### OpenRouter [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/openrouter.py)
+
+```python
+from openbrowser import Agent, ChatOpenAI
+import os
+
+llm = ChatOpenAI(
+    model='x-ai/grok-4',
+    base_url='https://openrouter.ai/api/v1',
+    api_key=os.getenv('OPENROUTER_API_KEY'),
+)
+
+agent = Agent(
+    task='Your task here',
+    llm=llm,
+)
+```
+
+Required environment variables:
+
+```bash .env
+OPENROUTER_API_KEY=
+```
+
+## Browser-Use LLM [example](https://github.com/billy-enrizky/openbrowser-ai/blob/main/examples/models/openbrowser_llm.py)
+
+`ChatBrowserUse()` is an optimized model from [browser-use.com](https://browser-use.com) designed specifically for browser automation tasks.
+
+```python
+from openbrowser import Agent, ChatBrowserUse
+
+# Initialize the model
+llm = ChatBrowserUse()
+
+# Create agent with the model
+agent = Agent(
+    task="...", # Your task here
+    llm=llm
+)
+```
+
+Required environment variables:
+
+```bash .env
+BROWSER_USE_API_KEY=
+```
+
+Get your API key from [Browser Use Cloud](https://cloud.browser-use.com/new-api-key).
