--- a/docs/development/n8n-integration.mdx
+++ b/docs/development/n8n-integration.mdx
@@ -111,10 +111,10 @@ If you encounter issues with the OpenBrowser node:
 - Verify your API key is valid and has sufficient credits
 - Check that your instructions are clear and specific
 - For complex tasks, consider breaking them into multiple steps
-- Refer to the [OpenBrowser documentation](https://docs.openbrowser.ai) for instruction best practices
+- Refer to the [OpenBrowser documentation](https://openbrowser.mintlify.app) for instruction best practices
 
 ## Resources
 
 - [n8n Community Nodes Documentation](https://docs.n8n.io/integrations/community-nodes/)
-- [OpenBrowser Documentation](https://docs.openbrowser.ai)
+- [OpenBrowser Documentation](https://openbrowser.mintlify.app)
 - [n8n-nodes-openbrowser GitHub Repository](https://github.com/draphonix/n8n-nodes-openbrowser) 
