--- a/docs/development/setup/contribution-guide.mdx
+++ b/docs/development/setup/contribution-guide.mdx
@@ -17,7 +17,7 @@ mode: "wide"
 
 - This space is moving fast. We have 10 ideas daily. Let's exchange some.
 - Browse our [GitHub Issues](https://github.com/billy-enrizky/openbrowser-ai/issues)
-- Check out our most active issues on [Discord](https://discord.gg/NHHXb5nM) 
+- Check out our most active issues on [Discord](https://discord.gg/YRXzbJjq9K) 
 - Get inspiration in [`#showcase-your-work`](https://discord.com/channels/1458995201564737670/1459104487074431080) channel
 
 
