--- a/docs/development/n8n-integration.mdx
+++ b/docs/development/n8n-integration.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'n8n Integration'
 description: 'Learn how to integrate OpenBrowser with n8n workflows'
+icon: "diagram-project"
 mode: "wide"
 ---
 
