docs(comparison): reference E2E test script in methodology
Add e2e_published_test.py to benchmark methodology notes.

--- a/docs/comparison.mdx
+++ b/docs/comparison.mdx
@@ -271,3 +271,4 @@ Features no competitor offers:
 - Latency measured as round-trip time from JSON-RPC request to response
 - Raw benchmark data: `benchmarks/playwright_results.json`, `benchmarks/cdp_results.json`, `benchmarks/openbrowser_results.json`
 - Benchmark scripts: `benchmarks/playwright_benchmark.py`, `benchmarks/cdp_benchmark.py`, `benchmarks/openbrowser_benchmark.py`
+- E2E test script: `benchmarks/e2e_published_test.py` (tests all 11 OpenBrowser tools against published PyPI package)
