fix(docs): correct uvx openbrowser -> uvx openbrowser-ai in doc pages
Fixed mcp-server.mdx (quick start + debug sections), quickstart.mdx,
and vibetest-use.mdx to use correct PyPI package name.

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -19,7 +19,7 @@ source .venv/bin/activate
 ```
 ```bash install openbrowser & chromium
 uv pip install openbrowser-ai
-uvx openbrowser install
+uvx openbrowser-ai install
 ```
 
 
