--- a/docs/customize/integrations/mcp-server.mdx
+++ b/docs/customize/integrations/mcp-server.mdx
@@ -14,7 +14,7 @@ The MCP (Model Context Protocol) Server allows you to expose openbrowser's brows
 ### Start MCP Server
 
 ```bash
-uvx openbrowser --mcp
+uvx openbrowser-ai[mcp] --mcp
 ```
 
 The server will start in stdio mode, ready to accept MCP connections.
@@ -174,7 +174,7 @@ uv pip install 'openbrowser-ai'
 Enable debug logging by setting:
 ```bash
 export OPENBROWSER_LOG_LEVEL=DEBUG
-uvx openbrowser --mcp
+uvx openbrowser-ai[mcp] --mcp
 ```
 
 ## Security Considerations
