--- a/docs/examples/apps/vibetest-use.mdx
+++ b/docs/examples/apps/vibetest-use.mdx
@@ -38,7 +38,7 @@ source .venv/bin/activate
 uv pip install -e .
 
 # 4.  Install browser runtime once
-uvx openbrowser install
+uvx openbrowser-ai install
 ```
 
 ### 1) Claude Code
